GNOME Bugzilla – Bug 625823
new Last.fm radio API playlists not parsed correctly
Last modified: 2010-08-02 13:24:20 UTC
Created attachment 166968 [details] excerpt from new API response The new radio API stores Last.fm specific info in the xspf playlist differently to the old API. Rhythmbox (Jamie Nicol's 2010 GSoC branch) makes use of the TOTEM_PL_PARSER_FIELD_ID and TOTEM_PL_PARSER_FIELD_DOWNLOAD_URI fields. Both are parsed correctly from the old API response but not from the new API response. If possible, it would be great if totem-pl-parser could parse correctly from both old and new style responses, as Rhythmbox uses both APIs.
Created attachment 166969 [details] excerpt from old API response, for comparison
Could you please attach a full XSPF file for both types of playlists (as in, one that's actually parseable instead of snippets)?
Created attachment 166972 [details] full response from new api
Created attachment 166973 [details] full response from old api
commit c1e5c2f15f4b0c523743cfeae0c7e636d9d468d1 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Aug 2 14:22:56 2010 +0100 Add support for Last.fm's new XSPF extensions Support the TOTEM_PL_PARSER_FIELD_ID and TOTEM_PL_PARSER_FIELD_DOWNLOAD_URI fields in newer last.fm XSPF playlists. https://bugzilla.gnome.org/show_bug.cgi?id=625823