Add support for Last.fm's new XSPF extensions

Support the TOTEM_PL_PARSER_FIELD_ID and
TOTEM_PL_PARSER_FIELD_DOWNLOAD_URI fields in newer last.fm XSPF
playlists.

https://bugzilla.gnome.org/show_bug.cgi?id=625823